fix wallet operations response
